# sf_std

./: CMakeLists.txt  README.md  build.sh  compile_flags.txt  run.sh
include/: arena_allocator.hpp  asserts_sf.hpp  bitset.hpp  constants.hpp  defines.hpp  dynamic_array.hpp  fixed_array.hpp  free_list_allocator.hpp  general_purpose_allocator.hpp  hashmap.hpp  io.hpp  iterator.hpp  linear_allocator.hpp  logger.hpp  memory_sf.hpp  optional.hpp  platform.hpp  platform_mem_alloc_templated.hpp  random_gen.hpp  result.hpp  stack_allocator.hpp  test_manager.hpp  traits.hpp  utility.hpp
src/: arena_allocator.cpp  asserts_sf.cpp  general_purpose_allocator.cpp  io.cpp  linear_allocator.cpp  memory_sf.cpp  platform_linux_wl.cpp  platform_linux_x11.cpp  platform_win32.cpp  random_gen.cpp  stack_allocator.cpp  test.cpp  test_manager.cpp  utility.cpp
